# frame

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENCE.md  Procfile  README.md  heroku.yml  pyproject.toml  sample_settings.ini
.github/workflows/: bandit.yml  linters.yml  tests.yml
docker/: api-entrypoint.sh  docker-compose.yaml  wait-for-postgres.sh
frame/: cert.py  config.py  constants.py  exceptions.py  jinja.py  predictors.py  s3.py  utils.py  ycm_casts.py
frame/api/: app.py  dependencies.py
frame/api/namespaces/: stations.py
frame/api/schemas/: stations.py
frame/api/services/: stations.py
frame/cli/: cli.py  stations.py  train.py
frame/data/: datalake.py  ecobici.py
frame/models/: __init__.py  base.py  stations.py
frame/resources/sql/: availability.sql  availability2.sql  eta.sql
frame/train/: availability.py  create_dataset.py  enrich.py  eta.py  metaestimator.py  metrics.py  train.py  transformers.py
locust/: locustfile.py
migrations/: env.py  script.py.mako
migrations/versions/: 2022_09_25_2315-5709ab7a20d4_add_stations.py  2022_10_08_1852-99d2ac2434ae_add_station_status.py  2022_10_08_2045-7f85dff1890c_make_last_reported_nullable.py  2022_10_09_1822-f6ab8a88245a_add_prediction_model.py  2023_02_28_2000-79b65ae3e0cf_persist_model_versions_to_db.py  2023_03_05_2214-446e63613490_save_features_for_predictions.py
tests/: test_dummy.py
