[tool.poetry]
name = "frame"
version = "0.3.0"
description = "Backend for BicisBA."
authors = ["CrossNox <ijmermet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"
uvicorn = "^0.18.3"
passlib = "^1.7.4"
youconfigme = "^0.9.0"
alembic = "^1.8.1"
typer = "^0.6.1"
psycopg2-binary = "^2.9.3"
setuptools = "65.3.0"
requests = "^2.28.1"
fastapi-utils = "^0.2.1"
types-requests = "^2.28.11"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.15.2"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pycln = "^2.1.1"

[tool.poetry.scripts]
frame = "frame.cli.cli:cli"

[tool.pylint."MESSAGES CONTROL"]
disable = [ "C", "fixme", "too-few-public-methods", "R0801", "no-name-in-module", "W0707"]

[tool.pylint.MASTER]
jobs = 1

[tool.pylint.FORMAT]
max-line-length = 88

[tool.black]
line-length = 88
skip-string-normalization = false
multi_line_output = 3
workers = 1

[tool.isort]
line_length = 88
indent = '    '
multi_line_output = 3
length_sort = true
use_parentheses = true
include_trailing_comma = true
force_sort_within_sections = true
known_first_party="smnt"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
