[tool.poetry]
name = "frame"
version = "2.5.1"
description = "Backend for BicisBA."
authors = ["CrossNox <ijmermet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
passlib = "^1.7.4"
youconfigme = "^0.9.0"
alembic = "^1.8.1"
typer = "^0.6.1"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"
fastapi-utils = "^0.2.1"
types-requests = "^2.28.11"
tenacity = "^8.1.0"
boto3 = "^1.26.11"
joblib = "^1.2.0"
duckdb = "0.7.0"
jinja2 = "~3.0"
jinjasql = "^0.1.8"
sqlparse = "^0.4.3"
numpy = "^1.24.2"
pandas = "^1.5.3"
tqdm = "^4.64.1"
mlflow = "^2.1.1"
types-setuptools = "^67.3.0.1"
llvmlite = ">=0.38"
lightgbm = "^3.3.5"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.15.2"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pycln = "^2.1.1"

[tool.poetry.scripts]
frame = "frame.cli.cli:cli"

[tool.poetry.group.dev.dependencies]
locust = "^2.13.0"
certifi = "^2022.9.24"

[tool.pylint.MAIN]
extension-pkg-allow-list = ["duckdb"]

[tool.pylint."MESSAGES CONTROL"]
disable = [ "C", "fixme", "too-few-public-methods", "R0801", "no-name-in-module", "W0707", "too-many-locals", "too-many-arguments", "too-many-statements"]

[tool.pylint.MASTER]
jobs = 1

[tool.pylint.FORMAT]
max-line-length = 88

[tool.black]
line-length = 88
skip-string-normalization = false
multi_line_output = 3
workers = 1

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
force_sort_within_sections = true
include_trailing_comma = true
indent = "    "
known_first_party="frame"
length_sort = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
